Informe:
	30/09/2022: Informe iniciado y avanzado

Código:
	