@@ -1,3 +1,0 @@
-pixel(X,Y,Color,Depth,[X,Y,Color,Depth]).
-
-getx(pixel(X,_,_,_),X).
