@@ -2,4 +2,5 @@ Informe:
 	30/09/2022: Informe iniciado y avanzado
 
 Código:
+	01/10/2022: Constructores TDAs pixbit, pixhex y pixrgb listos
 	
